# Android-CamSwap-OpenSource

./: .gitignore  .gitmodules  LICENSE  README.md  build.gradle  code description.md  gradle.properties  virtual-camera-streaming-implementation.md
.github/workflows/: android.yml
app/: build.gradle  proguard-rules.pro
app/src/androidTest/java/com/example/camswap/: ExampleInstrumentedTest.java
app/src/androidTest/java/com/example/camswap/ui/: MainScreenTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: xposed_init
app/src/main/cpp/: CMakeLists.txt  hook_aaudio.cpp  hook_aaudio.h  hook_opensles.cpp  hook_opensles.h  native_audio_hook.cpp  native_audio_hook.h  pcm_bridge.cpp  pcm_bridge.h
app/src/main/java/com/example/camswap/: BytePool.java  Camera1Handler.java  Camera2Handler.java  ConfigManager.java  GLVideoRenderer.java  HookMain.java  ICameraHandler.java  MainActivity.kt  MicrophoneHandler.java  NativeAudioHook.java  NotificationService.java  VideoProvider.java  VideoToFrames.java
app/src/main/java/com/example/camswap/ui/: HomeScreen.kt  MainViewModel.kt  ManageScreen.kt  MediaManagerViewModel.kt  Navigation.kt  SettingsScreen.kt
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/values-en/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rHK/: strings.xml
app/src/main/res/values-zh-rMO/: strings.xml
app/src/main/res/values-zh-rTW/: strings.xml
app/src/test/java/com/example/camswap/: ConfigManagerTest.java  VideoProviderTest.java
(+33 files in other folders)
